# mollysocket

./: .gitignore  3rd-parties.md  Cargo.toml  Containerfile  Containerfile.alpine  Containerfile.debian  INSTALL.md  LICENSE.txt  README.md  config-sample.toml  docker-compose.yml  mollysocket-vapid.service  mollysocket.service
.github/workflows/: build.yml  container-image.yml  cron.yml  helmchart.yml  image.yml  release.yml  test.yml
charts/mollysocket/: Chart.yaml  values.yaml
charts/mollysocket/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  pvc.yaml  service.yaml  serviceaccount.yaml
charts/mollysocket/templates/tests/: test-connection.yaml
kubernetes/: README.md  deployment.yaml  ingress.yaml  pvc.yaml  secret.yaml  service.yaml
proto/: SignalService.proto  WebSocketResources.proto
reverse_proxy_samples/: Caddyfile  apache.conf
src/: build_proto.rs  cli.rs  config.rs  db.rs  error.rs  main.rs  qrcode.rs  server.rs  signalwebsocket.rs  utils.rs  vapid.rs  ws.rs
src/cli/: connection.rs  oneshot.rs  qrcode.rs  server.rs  test.rs  vapid.rs
src/config/: user_config.rs
src/db/: migrations.rs
src/server/: connections.rs  metrics.rs  web.rs
src/server/web/: html.rs
src/signalwebsocket/: tls.rs  websocket_connection.rs  websocket_message.rs
src/utils/: error.rs  post_allowed.rs
src/ws/: proto_signalservice.rs  proto_websocketresources.rs  signalwebsocket.rs  tls.rs  websocket_connection.rs
src/ws/certs/: flatline.pem  signal-messenger.pem
