[package]
name = "mollysocket"
version = "1.2.0"
edition = "2021"
license = "AGPL-3.0-or-later"
authors = ["S1m"]
description = "MollySocket allows getting signal notifications via UnifiedPush."
readme = "README.md"
repository = "https://github.com/mollyim/mollysocket"
keywords = ["unifiedpush", "molly", "signal"]
# build = "src/build_proto.rs"

[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "s"  # Optimize for size
lto = true # Link time optimization
codegen-units = 1 # Limit code generation units

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.78"
env_logger = "0.11.3"
futures-channel = "0.3"
futures-util = "0.3"
http = "1.1.0"
# until https://github.com/rust-lang/rust/issues/27709 is merged
ip_rfc = "0.1.0"
lazy_static = "1.4.0"
log = "0.4.21"
native-tls = "0.2.11"
prost = "0.12"
reqwest = { version = "0.12.1", features = ["json"]}
serde = { version = "1.0.197", features = ["derive"]}
tokio-tungstenite = { version = "0.21.0", features = ["native-tls"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
url = "2.5.0"
rusqlite = "0.31.0"
rocket = { version = "0.5.0", features = ["json"]}
rocket_prometheus = "0.10.0"
trust-dns-resolver = { version = "0.23.2", features = ["tokio-runtime"]}
eyre = "0.6.12"
clap = {version = "4.5.3", features = ["derive"]}
figment = { version = "0.10.15", features = ["toml", "env"] }
directories = "5.0.1"
regex = "1.10.4"

# [build-dependencies]
# prost-build = { version = "0.12" }
